apps/base/tandoor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tandoor
  namespace: tandoor
spec:
  selector:
    app: tandoor
  ports:
    - port: 8080
      targetPort: 8080
